# fbksd-server

./: Cargo.toml  LICENSE.txt  README.md  TODO.md  env.sh  fbksd-gitlab.txt  fbksd_config.json
docker/ci/: Dockerfile  run.sh
docker/server/: Dockerfile  build.sh  run.sh
fbksd-ci/: Cargo.toml
fbksd-ci/src/: cli.yml  client.rs  cmake.rs  main.rs
fbksd-consumer/: Cargo.toml
fbksd-consumer/src/: main.rs
fbksd-core/: Cargo.toml  env.sh  model.sql
fbksd-core/migrations/2020-01-12-015227_registry/: down.sql  up.sql
fbksd-core/src/: ci.rs  client.rs  config.rs  db.rs  docker.rs  error.rs  info.rs  lib.rs  msgs.rs  page.rs  paths.rs  registry.rs  registry_db.rs  schema.rs  system_config.rs  tasks.rs  utils.rs  workspace.rs
fbksd-ctl/: Cargo.toml
fbksd-ctl/src/: cli.yml  main.rs
fbksd-mailer/: Cargo.toml
fbksd-mailer/src/: main.rs
fbksd-producer/: Cargo.toml
fbksd-producer/src/: main.rs
fbksd-server/: Cargo.toml
fbksd-server/src/: main.rs
fbksd-webhooks/: Cargo.toml
fbksd-webhooks/src/: cli.yml  main.rs
