[package]
name = "fbksd-mailer"
version = "0.1.0"
authors = ["Jonas Deyson <jonasdeyson@gmail.com>"]
edition = "2018"

[dependencies]
fbksd-core = {path = "../fbksd-core"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1"
native-tls = "0.2.3"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
log4rs = "0.8"
