[package]
name = "fbksd-producer"
version = "0.1.0"
authors = ["Jonas Deyson <jonasdeyson@gmail.com>"]
edition = "2018"

[dependencies]
fbksd-core = {path = "../fbksd-core"}
clap = {version = "2.32", features = ["yaml"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1"
