[package]
name = "fbksd-webhooks"
version = "0.1.0"
authors = ["Jonas Deyson <jonasdeyson@gmail.com>"]
edition = "2018"

[dependencies]
fbksd-core = {path = "../fbksd-core"}
actix-rt = "1.0"
actix-web = { version="2.0", features=["openssl"] }
actix-service = "1.0"
env_logger = "0.6"
openssl = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
bytes = "0.5"
futures = "0.3"
